Fix: when only one sip line's shared line is enable, the shared lines of all SIP lines will be enable.

--- a/resources/templates/provision/flyingvoice/fip13g/{$mac}.cfg
+++ b/resources/templates/provision/flyingvoice/fip13g/{$mac}.cfg
@@ -368,7 +368,8 @@ account.1.blf.subscribe_event=
 #######################################################################################
 ##                                   SCA                                             ##       
 #######################################################################################
-account.1.shared_line= {$shared_line_1}
+account.1.shared_line= {if isset$account.1.password }{$shared_line_1}{else}{/if}
+
 account.1.line_seize.expires=
 account.1.shared_line_one_touch_bargein.enable=
 account.1.shared_line_one_touch_retrieve.enable=
@@ -745,7 +746,8 @@ account.2.blf.subscribe_event=
 #######################################################################################
 ##                                   SCA                                             ##       
 #######################################################################################
-account.2.shared_line= {$shared_line_1}
+account.2.shared_line= {if isset$account.1.password }{$shared_line_1}{else}{/if}
+
 account.2.line_seize.expires=
 account.2.shared_line_one_touch_bargein.enable=
 account.2.shared_line_one_touch_retrieve.enable=
@@ -1138,7 +1140,8 @@ account.3.blf.subscribe_event=
 #######################################################################################
 ##                                   SCA                                             ##       
 #######################################################################################
-account.3.shared_line= {$shared_line_1}
+account.3.shared_line= {if isset$account.1.password }{$shared_line_1}{else}{/if}
+
 account.3.line_seize.expires=
 account.3.shared_line_one_touch_bargein.enable=
 account.3.shared_line_one_touch_retrieve.enable=
@@ -1531,7 +1534,8 @@ account.4.blf.subscribe_event=
 #######################################################################################
 ##                                   SCA                                             ##       
 #######################################################################################
-account.4.shared_line= {$shared_line_1}
+account.4.shared_line= {if isset$account.1.password }{$shared_line_1}{else}{/if}
+
 account.4.line_seize.expires=
 account.4.shared_line_one_touch_bargein.enable=
 account.4.shared_line_one_touch_retrieve.enable=
