--- a/resources/templates/provision/flyingvoice/fip15g/{$mac}.cfg
+++ b/resources/templates/provision/flyingvoice/fip15g/{$mac}.cfg
@@ -367,7 +367,8 @@ account.1.blf.subscribe_event=
 #######################################################################################
 ##                                   SCA                                             ##       
 #######################################################################################
-account.1.shared_line= {$shared_line_1}
+account.1.shared_line= {if isset$account.1.password }{$shared_line_1}{else}{/if}
+
 account.1.line_seize.expires=
 account.1.shared_line_one_touch_bargein.enable=
 account.1.shared_line_one_touch_retrieve.enable=
@@ -765,7 +766,8 @@ account.2.blf.subscribe_event=
 #######################################################################################
 ##                                   SCA                                             ##       
 #######################################################################################
-account.2.shared_line= {$shared_line_1}
+account.2.shared_line= {if isset$account.1.password }{$shared_line_1}{else}{/if}
+
 account.2.line_seize.expires=
 account.2.shared_line_one_touch_bargein.enable=
 account.2.shared_line_one_touch_retrieve.enable=
@@ -1179,7 +1181,8 @@ account.3.blf.subscribe_event=
 #######################################################################################
 ##                                   SCA                                             ##       
 #######################################################################################
-account.3.shared_line= {$shared_line_1}
+account.3.shared_line= {if isset$account.1.password }{$shared_line_1}{else}{/if}
+
 account.3.line_seize.expires=
 account.3.shared_line_one_touch_bargein.enable=
 account.3.shared_line_one_touch_retrieve.enable=
@@ -1593,7 +1596,8 @@ account.4.blf.subscribe_event=
 #######################################################################################
 ##                                   SCA                                             ##       
 #######################################################################################
-account.4.shared_line= {$shared_line_1}
+account.4.shared_line= {if isset$account.1.password }{$shared_line_1}{else}{/if}
+
 account.4.line_seize.expires=
 account.4.shared_line_one_touch_bargein.enable=
 account.4.shared_line_one_touch_retrieve.enable=
@@ -2006,7 +2010,8 @@ account.5.blf.subscribe_event=
 #######################################################################################
 ##                                   SCA                                             ##       
 #######################################################################################
-account.5.shared_line= {$shared_line_1}
+account.5.shared_line= {if isset$account.1.password }{$shared_line_1}{else}{/if}
+
 account.5.line_seize.expires=
 account.5.shared_line_one_touch_bargein.enable=
 account.5.shared_line_one_touch_retrieve.enable=
@@ -2419,7 +2424,8 @@ account.6.blf.subscribe_event=
 #######################################################################################
 ##                                   SCA                                             ##       
 #######################################################################################
-account.6.shared_line= {$shared_line_1}
+account.6.shared_line= {if isset$account.1.password }{$shared_line_1}{else}{/if}
+
 account.6.line_seize.expires=
 account.6.shared_line_one_touch_bargein.enable=
 account.6.shared_line_one_touch_retrieve.enable=
@@ -2833,7 +2839,8 @@ account.7.blf.subscribe_event=
 #######################################################################################
 ##                                   SCA                                             ##       
 #######################################################################################
-account.7.shared_line= {$shared_line_1}
+account.7.shared_line= {if isset$account.1.password }{$shared_line_1}{else}{/if}
+
 account.7.line_seize.expires=
 account.7.shared_line_one_touch_bargein.enable=
 account.7.shared_line_one_touch_retrieve.enable=
@@ -3247,7 +3254,8 @@ account.8.blf.subscribe_event=
 #######################################################################################
 ##                                   SCA                                             ##       
 #######################################################################################
-account.8.shared_line= {$shared_line_1}
+account.8.shared_line= {if isset$account.1.password }{$shared_line_1}{else}{/if}
+
 account.8.line_seize.expires=
 account.8.shared_line_one_touch_bargein.enable=
 account.8.shared_line_one_touch_retrieve.enable=
@@ -3661,7 +3669,8 @@ account.9.blf.subscribe_event=
 #######################################################################################
 ##                                   SCA                                             ##       
 #######################################################################################
-account.9.shared_line= {$shared_line_1}
+account.9.shared_line= {if isset$account.1.password }{$shared_line_1}{else}{/if}
+
 account.9.line_seize.expires=
 account.9.shared_line_one_touch_bargein.enable=
 account.9.shared_line_one_touch_retrieve.enable=
@@ -4040,7 +4049,8 @@ account.10.blf.subscribe_event=
 #######################################################################################
 ##                                   SCA                                             ##       
 #######################################################################################
-account.10.shared_line= {$shared_line_1}
+account.10.shared_line= {if isset$account.1.password }{$shared_line_1}{else}{/if}
+
 account.10.line_seize.expires=
 account.10.shared_line_one_touch_bargein.enable=
 account.10.shared_line_one_touch_retrieve.enable=
