--- a/resources/templates/provision/flyingvoice/fip12wp/{$mac}.cfg
+++ b/resources/templates/provision/flyingvoice/fip12wp/{$mac}.cfg
@@ -368,7 +368,8 @@ account.1.blf.subscribe_event=
 #######################################################################################
 ##                                   SCA                                             ##       
 #######################################################################################
-account.1.shared_line= {$shared_line_1}
+account.1.shared_line= {if isset$account.1.password }{$shared_line_1}{else}{/if}
+
 account.1.line_seize.expires=
 account.1.shared_line_one_touch_bargein.enable=
 account.1.shared_line_one_touch_retrieve.enable=
@@ -745,7 +746,8 @@ account.2.blf.subscribe_event=
 #######################################################################################
 ##                                   SCA                                             ##       
 #######################################################################################
-account.2.shared_line= {$shared_line_1}
+account.2.shared_line= {if isset$account.1.password }{$shared_line_1}{else}{/if}
+
 account.2.line_seize.expires=
 account.2.shared_line_one_touch_bargein.enable=
 account.2.shared_line_one_touch_retrieve.enable=
