Added options to configure screensaver
Added the following 3 options to configure screensaver through provisioning for T46G
screensaver.wait_time
screensaver.display_clock.enable
screensaver.mode

--- a/resources/templates/provision/yealink/t46g/y000000000028.cfg
+++ b/resources/templates/provision/yealink/t46g/y000000000028.cfg
@@ -1674,3 +1674,15 @@ directory_setting.url = https://{if isset($http_auth_username)}{$http_auth_usern
 #Before using this parameter, you should store the desired firmware (x.71.x.x.rom) to the provisioning server.
 firmware.url = {$yealink_firmware_url}/{$yealink_firmware_t46g}
 
+
+#######################################################################################
+##                                   Screensaver Options                             ##
+#######################################################################################
+#Configure the time (in seconds) to wait in the idle state before the screen saver starts.
+screensaver.wait_time = {$yealink_screensaver_wait_time}
+
+#Configure the ScreenSaver Display Clock (0-Disabled;1-Enabled)
+screensaver.display_clock.enable = 1
+
+#Configure the type of screen saver to display (system-0;Custom-1;Server XML-3)
+screensaver.mode = 0
