Added variables to configure screensaver
I made sure that the variable I added was consistent with the same naming convention for T46S,

--- a/resources/templates/provision/yealink/t46g/y000000000028.cfg
+++ b/resources/templates/provision/yealink/t46g/y000000000028.cfg
@@ -1674,3 +1674,9 @@ directory_setting.url = https://{if isset($http_auth_username)}{$http_auth_usern
 #Before using this parameter, you should store the desired firmware (x.71.x.x.rom) to the provisioning server.
 firmware.url = {$yealink_firmware_url}/{$yealink_firmware_t46g}
 
+#######################################################################################
+##                                   Screensaver                                     ##
+#######################################################################################
+screensaver.mode=
+screensaver.wait_time= {$yealink_screensaver_wait}
+screensaver.display_clock.enable=
