--- a/resources/templates/provision/polycom/4.x/{$mac}.cfg
+++ b/resources/templates/provision/polycom/4.x/{$mac}.cfg
@@ -211,7 +211,10 @@
 
 		up.OffHookLineView.enabled="{$polycom_offhook_line_view_enabled}"
 		prov.polling.enabled="{$polycom_provision_polling_enabled}"
+		prov.polling.mode="{$polycom_provision_polling_mode}"
+		prov.polling.period="{$polycom_provision_polling_period}"
 		prov.polling.time="{$polycom_provision_polling_time}"
+		prov.polling.timeRandomEnd="{$polycom_provision_polling_timerandomend}"
 		feature.urlDialing.enabled="0"
 		feature.logUpload.enabled="{$polycom_log_upload_enabled}"
 		powerSaving.enable="{$polycom_power_saving_enable}"
