Fix: unable to generate configuration file of Flyingvoice due to syntax error.

--- a/resources/templates/provision/flyingvoice/fip11c/{$mac}.cfg
+++ b/resources/templates/provision/flyingvoice/fip11c/{$mac}.cfg
@@ -368,7 +368,7 @@ account.1.blf.subscribe_event=
 #######################################################################################
 ##                                   SCA                                             ##       
 #######################################################################################
-account.1.shared_line= {if isset$account.1.password }{$shared_line_1}{else}{/if}
+account.1.shared_line= {if isset($account.1.password) }{$shared_line_1}{else}{/if}
 
 account.1.line_seize.expires=
 account.1.shared_line_one_touch_bargein.enable=
@@ -746,7 +746,7 @@ account.2.blf.subscribe_event=
 #######################################################################################
 ##                                   SCA                                             ##       
 #######################################################################################
-account.2.shared_line= {if isset$account.1.password }{$shared_line_1}{else}{/if}
+account.2.shared_line= {if isset($account.2.password)}{$shared_line_1}{else}{/if}
 
 account.2.line_seize.expires=
 account.2.shared_line_one_touch_bargein.enable=
@@ -1140,7 +1140,7 @@ account.3.blf.subscribe_event=
 #######################################################################################
 ##                                   SCA                                             ##       
 #######################################################################################
-account.3.shared_line= {if isset$account.1.password }{$shared_line_1}{else}{/if}
+account.3.shared_line= {if isset($account.3.password)}{$shared_line_1}{else}{/if}
 
 account.3.line_seize.expires=
 account.3.shared_line_one_touch_bargein.enable=
