--- a/resources/templates/provision/flyingvoice/fip10/{$mac}.cfg
+++ b/resources/templates/provision/flyingvoice/fip10/{$mac}.cfg
@@ -367,7 +367,7 @@ account.1.blf.subscribe_event=
 #######################################################################################
 ##                                   SCA                                             ##       
 #######################################################################################
-account.1.shared_line= {if isset$account.1.password }{$shared_line_1}{else}{/if}
+account.1.shared_line= {if isset($account.1.password) }{$shared_line_1}{else}{/if}
 
 account.1.line_seize.expires=
 account.1.shared_line_one_touch_bargein.enable=
@@ -745,7 +745,7 @@ account.2.blf.subscribe_event=
 #######################################################################################
 ##                                   SCA                                             ##       
 #######################################################################################
-account.2.shared_line= {if isset$account.1.password }{$shared_line_1}{else}{/if}
+account.2.shared_line= {if isset($account.2.password)}{$shared_line_1}{else}{/if}
 
 account.2.line_seize.expires=
 account.2.shared_line_one_touch_bargein.enable=
