--- a/resources/templates/provision/flyingvoice/fip15g/{$mac}.cfg
+++ b/resources/templates/provision/flyingvoice/fip15g/{$mac}.cfg
@@ -367,7 +367,7 @@ account.1.blf.subscribe_event=
 #######################################################################################
 ##                                   SCA                                             ##       
 #######################################################################################
-account.1.shared_line= {if isset$account.1.password }{$shared_line_1}{else}{/if}
+account.1.shared_line= {if isset($account.1.password) }{$shared_line_1}{else}{/if}
 
 account.1.line_seize.expires=
 account.1.shared_line_one_touch_bargein.enable=
@@ -766,7 +766,7 @@ account.2.blf.subscribe_event=
 #######################################################################################
 ##                                   SCA                                             ##       
 #######################################################################################
-account.2.shared_line= {if isset$account.1.password }{$shared_line_1}{else}{/if}
+account.2.shared_line= {if isset($account.2.password)}{$shared_line_1}{else}{/if}
 
 account.2.line_seize.expires=
 account.2.shared_line_one_touch_bargein.enable=
@@ -1181,7 +1181,7 @@ account.3.blf.subscribe_event=
 #######################################################################################
 ##                                   SCA                                             ##       
 #######################################################################################
-account.3.shared_line= {if isset$account.1.password }{$shared_line_1}{else}{/if}
+account.3.shared_line= {if isset($account.3.password)}{$shared_line_1}{else}{/if}
 
 account.3.line_seize.expires=
 account.3.shared_line_one_touch_bargein.enable=
@@ -1596,7 +1596,7 @@ account.4.blf.subscribe_event=
 #######################################################################################
 ##                                   SCA                                             ##       
 #######################################################################################
-account.4.shared_line= {if isset$account.1.password }{$shared_line_1}{else}{/if}
+account.4.shared_line= {if isset($account.4.password)}{$shared_line_1}{else}{/if}
 
 account.4.line_seize.expires=
 account.4.shared_line_one_touch_bargein.enable=
@@ -2010,7 +2010,7 @@ account.5.blf.subscribe_event=
 #######################################################################################
 ##                                   SCA                                             ##       
 #######################################################################################
-account.5.shared_line= {if isset$account.1.password }{$shared_line_1}{else}{/if}
+account.5.shared_line= {if isset($account.5.password)}{$shared_line_1}{else}{/if}
 
 account.5.line_seize.expires=
 account.5.shared_line_one_touch_bargein.enable=
@@ -2424,7 +2424,7 @@ account.6.blf.subscribe_event=
 #######################################################################################
 ##                                   SCA                                             ##       
 #######################################################################################
-account.6.shared_line= {if isset$account.1.password }{$shared_line_1}{else}{/if}
+account.6.shared_line= {if isset($account.6.password)}{$shared_line_1}{else}{/if}
 
 account.6.line_seize.expires=
 account.6.shared_line_one_touch_bargein.enable=
@@ -2839,7 +2839,7 @@ account.7.blf.subscribe_event=
 #######################################################################################
 ##                                   SCA                                             ##       
 #######################################################################################
-account.7.shared_line= {if isset$account.1.password }{$shared_line_1}{else}{/if}
+account.7.shared_line= {if isset($account.7.password)}{$shared_line_1}{else}{/if}
 
 account.7.line_seize.expires=
 account.7.shared_line_one_touch_bargein.enable=
@@ -3254,7 +3254,7 @@ account.8.blf.subscribe_event=
 #######################################################################################
 ##                                   SCA                                             ##       
 #######################################################################################
-account.8.shared_line= {if isset$account.1.password }{$shared_line_1}{else}{/if}
+account.8.shared_line= {if isset($account.8.password)}{$shared_line_1}{else}{/if}
 
 account.8.line_seize.expires=
 account.8.shared_line_one_touch_bargein.enable=
@@ -3669,7 +3669,7 @@ account.9.blf.subscribe_event=
 #######################################################################################
 ##                                   SCA                                             ##       
 #######################################################################################
-account.9.shared_line= {if isset$account.1.password }{$shared_line_1}{else}{/if}
+account.9.shared_line= {if isset($account.9.password)}{$shared_line_1}{else}{/if}
 
 account.9.line_seize.expires=
 account.9.shared_line_one_touch_bargein.enable=
@@ -4049,7 +4049,7 @@ account.10.blf.subscribe_event=
 #######################################################################################
 ##                                   SCA                                             ##       
 #######################################################################################
-account.10.shared_line= {if isset$account.1.password }{$shared_line_1}{else}{/if}
+account.10.shared_line= {if isset($account.10.password)}{$shared_line_1}{else}{/if}
 
 account.10.line_seize.expires=
 account.10.shared_line_one_touch_bargein.enable=
