use application tag to enable firmware updates

--- a/resources/templates/provision/polycom/4.x/{$mac}.cfg
+++ b/resources/templates/provision/polycom/4.x/{$mac}.cfg
@@ -1,5 +1,28 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <PHONE>
+	{if $polycom_provision_app_include == "true"}
+	{*
+
+	Be sure to add a rewrite directive in the nginx site under the #polycom section if one is not already present. Example:
+
+		#polycom
+		rewrite "^.*/provision/000000000000.cfg$" "/app/provision/?mac=$1&file={%24mac}.cfg";
+		rewrite "^.*/provision/polycom/firmware/(.+)$" /app/polycom/resources/firmware/$1; ### add if missing
+
+	Unzip the UC software from polycom into /var/www/fusionpbx/app/polycom/resources/frimware/4.x.x/, and be sure to set the polycom_app_file_path_4x to match, e.g. "4.0.15/"
+
+	*}<APPLICATION
+		APP_FILE_PATH="polycom/firmware/{$polycom_provision_app_file_path_4x}sip.ld"
+		CONFIG_FILES=""
+		MISC_FILES=""
+		LOG_FILE_DIRECTORY=""
+		OVERRIDES_DIRECTORY=""
+		CONTACTS_DIRECTORY=""
+		LICENSE_DIRECTORY=""
+		USER_PROFILES_DIRECTORY=""
+		CALL_LISTS_DIRECTORY=""
+	/>
+	{/if}
 	<REGISTRATION
 
 		{foreach $lines as $row}reg.{$row.line_number}.displayName="{$row.display_name}"
