--- a/resources/templates/provision/polycom/6.x/{$mac}.cfg
+++ b/resources/templates/provision/polycom/6.x/{$mac}.cfg
@@ -140,6 +140,14 @@
 		tcpIpApp.sntp.daylightSavings.stop.dayOfWeek.lastInMonth="0"
 	/>
 	<DIALPLAN
+		{if $polycom_emergency_customized == "true") }
+			dialplan.routing.server.1.address="{$polycom_emergency_server}"
+			dialplan.routing.server.1.port="{$polycom_emergency_port}"
+				{foreach $polycom_emergency_number as $number name=emergencynumbers}
+					dialplan.routing.emergency.{$smarty.foreach.emergencynumbers.iteration}.value="{$number}"
+					dialplan.routing.emergency.{$smarty.foreach.emergencynumbers.iteration}.server.1="1"
+				{/foreach}
+		{/if}
 		{if isset($polycom_digitmap)}dialplan.digitmap="{$polycom_digitmap}"{else}dialplan.digitmap=""{/if}
 		{if isset($polycom_digitmap_timeout)}dialplan.digitmap.timeOut="{$polycom_digitmap_timeout}"{else}dialplan.digitmap.timeOut=""{/if}
 	/>
