--- a/resources/templates/provision/yealink/t46u/y900000000108.cfg
+++ b/resources/templates/provision/yealink/t46u/y900000000108.cfg
@@ -5,35 +5,9 @@
 #######################################################################################
 ##                                    Custom Softkeys                                   ##
 #######################################################################################
-
-## Transfer for Voicemail
 softkey.1.enable = 1
-softkey.1.label = Xfer to VM 
-softkey.1.position = 3 
-softkey.1.action = *99$PEnter Extension&TTransfer to Voicemail&C4&N$$Trefer$
-softkey.1.use.idle = 0
-softkey.1.use.on_talk = 1
-#softkey.3.use.dialtone = 1
-
-
-
-
-#######################################################################################
-##                                  Programablekey                                   ##
-#######################################################################################
-programablekey.2.type = 0
-#programablekey.2.line = 1
-#programablekey.2.value = 
-#programablekey.X.xml_phonebook
-#programablekey.X.history_type
-#programablekey.2.label = 
-
-
-
-
-programablekey.3.type = 73
-programablekey.3.line = 1
-programablekey.3.value = *8$PEnter Extension&TIntercom Extension&C4&N$ 
-#programablekey.X.xml_phonebook
-#programablekey.X.history_type
-programablekey.3.label = Intercom
+softkey.1.label = Intercom 
+softkey.1.position = 0 
+softkey.1.action = *8$P1N12$ 
+softkey.1.use.idle = 1 
+softkey.1.use.dialtone = 1
