--- a/resources/templates/provision/yealink/t46s/{$mac}.cfg
+++ b/resources/templates/provision/yealink/t46s/{$mac}.cfg
@@ -13,7 +13,11 @@ account.1.enable = 1
 {else}
 account.1.enable = 0
 {/if}
+{if $extension_label == "false"}
 account.1.label = {$account.1.display_name}
+{else}
+account.1.label = {$account.1.user_id}
+{/if}
 account.1.display_name = {$account.1.display_name}
 account.1.auth_name = {$account.1.auth_id}
 account.1.password = {$account.1.password}
@@ -540,7 +544,11 @@ account.2.enable = 1
 {else}
 account.2.enable = 0
 {/if}
+{if $extension_label == "false"}
 account.2.label = {$account.2.display_name}
+{else}
+account.2.label = {$account.2.user_id}
+{/if}
 account.2.display_name = {$account.2.display_name}
 account.2.auth_name = {$account.2.auth_id}
 account.2.password = {$account.2.password}
