--- a/resources/templates/provision/yealink/cp920/{$mac}.cfg
+++ b/resources/templates/provision/yealink/cp920/{$mac}.cfg
@@ -13,7 +13,7 @@ account.1.enable = 1
 {else}
 account.1.enable = 0
 {/if}
-account.1.label = {$account.1.display_name}
+account.1.label = {$account.1.label}
 account.1.display_name = {$account.1.display_name}
 account.1.auth_name = {$account.1.auth_id}
 account.1.password = {$account.1.password}
@@ -526,7 +526,7 @@ account.2.enable = 1
 {else}
 account.2.enable = 0
 {/if}
-account.2.label = {$account.2.display_name}
+account.2.label = {$account.2.label}
 account.2.display_name = {$account.2.display_name}
 account.2.auth_name = {$account.2.auth_id}
 account.2.password = {$account.2.password}
@@ -1041,7 +1041,7 @@ account.3.enable = 1
 {else}
 account.3.enable = 0
 {/if}
-account.3.label = {$account.3.display_name}
+account.3.label = {$account.3.label}
 account.3.display_name = {$account.3.display_name}
 account.3.auth_name = {$account.3.auth_id}
 account.3.password = {$account.3.password}
@@ -1543,7 +1543,7 @@ account.4.enable = 1
 {else}
 account.4.enable = 0
 {/if}
-account.4.label = {$account.4.display_name}
+account.4.label = {$account.4.label}
 account.4.display_name = {$account.4.display_name}
 account.4.auth_name = {$account.4.auth_id}
 account.4.password = {$account.4.password}
@@ -2042,7 +2042,7 @@ account.5.enable = 1
 {else}
 account.5.enable = 0
 {/if}
-account.5.label = {$account.5.display_name}
+account.5.label = {$account.5.label}
 account.5.display_name = {$account.5.display_name}
 account.5.auth_name = {$account.5.auth_id}
 account.5.password = {$account.5.password}
@@ -2540,7 +2540,7 @@ account.6.enable = 1
 {else}
 account.6.enable = 0
 {/if}
-account.6.label = {$account.6.display_name}
+account.6.label = {$account.6.label}
 account.6.display_name = {$account.6.display_name}
 account.6.auth_name = {$account.6.auth_id}
 account.6.password = {$account.6.password}
