--- a/resources/templates/provision/yealink/cp860/{$mac}.cfg
+++ b/resources/templates/provision/yealink/cp860/{$mac}.cfg
@@ -1543,7 +1543,7 @@ account.4.enable = 1
 {else}
 account.4.enable = 0
 {/if}
-account.4.label = {$account.4.display_name}
+account.4.label = {$account.4.label}
 account.4.display_name = {$account.4.display_name}
 account.4.auth_name = {$account.4.auth_id}
 account.4.password = {$account.4.password}
@@ -2040,7 +2040,7 @@ account.5.enable = 1
 {else}
 account.5.enable = 0
 {/if}
-account.5.label = {$account.5.display_name}
+account.5.label = {$account.5.label}
 account.5.display_name = {$account.5.display_name}
 account.5.auth_name = {$account.5.auth_id}
 account.5.password = {$account.5.password}
@@ -2537,7 +2537,7 @@ account.6.enable = 1
 {else}
 account.6.enable = 0
 {/if}
-account.6.label = {$account.6.display_name}
+account.6.label = {$account.6.label}
 account.6.display_name = {$account.6.display_name}
 account.6.auth_name = {$account.6.auth_id}
 account.6.password = {$account.6.password}
