--- a/resources/templates/provision/yealink/t20p/{$mac}.cfg
+++ b/resources/templates/provision/yealink/t20p/{$mac}.cfg
@@ -15,7 +15,7 @@ account.1.enable = 0
 {/if}
 
 #Configure the label displayed on the LCD screen for account 1.
-account.1.label = {$account.1.display_name}
+account.1.label = {$account.1.label}
 
 #Configure the display name of account 1.
 account.1.display_name = {$account.1.display_name}
@@ -379,7 +379,7 @@ account.2.enable = 0
 {/if}
 
 #Configure the label displayed on the LCD screen for account 2.
-account.2.label = {$account.2.display_name}
+account.2.label = {$account.2.label}
 
 #Configure the display name of account 2.
 account.2.display_name = {$account.2.display_name}
@@ -706,7 +706,7 @@ account.3.enable = 0
 {/if}
 
 #Configure the label displayed on the LCD screen for account 3.
-account.3.label = {$account.3.display_name}
+account.3.label = {$account.3.label}
 
 #Configure the display name of account 3.
 account.3.display_name = {$account.3.display_name}
@@ -1031,7 +1031,7 @@ account.4.enable = 0
 {/if}
 
 #Configure the label displayed on the LCD screen for account 4.
-account.4.label = {$account.4.display_name}
+account.4.label = {$account.4.label}
 
 #Configure the display name of account 4.
 account.4.display_name = {$account.4.display_name}
@@ -1359,7 +1359,7 @@ account.5.enable = 0
 {/if}
 
 #Configure the label displayed on the LCD screen for account 5.
-account.5.label = {$account.5.display_name}
+account.5.label = {$account.5.label}
 
 #Configure the display name of account 5.
 account.5.display_name = {$account.5.display_name}
@@ -1682,7 +1682,7 @@ account.6.enable = 0
 {/if}
 
 #Configure the label displayed on the LCD screen for account 6.
-account.6.label = {$account.6.display_name}
+account.6.label = {$account.6.label}
 
 #Configure the display name of account 6.
 account.6.display_name = {$account.6.display_name}
@@ -2045,4 +2045,3 @@ linekey.{$row.device_key_id}.label = {$row.device_key_label}
 
 
 {/foreach}
-
