--- a/resources/templates/provision/yealink/t46u/{$mac}.cfg
+++ b/resources/templates/provision/yealink/t46u/{$mac}.cfg
@@ -114,7 +114,7 @@ account.1.enable = 1
 {else}
 account.1.enable = 0
 {/if}
-account.1.label = {$account.1.display_name}
+account.1.label = {$account.1.label}
 account.1.display_name = {$account.1.display_name}
 account.1.auth_name = {$account.1.auth_id}
 
@@ -677,7 +677,7 @@ account.2.enable = 1
 {else}
 account.2.enable = 0
 {/if}
-account.2.label = {$account.2.display_name}
+account.2.label = {$account.2.label}
 account.2.display_name = {$account.2.display_name}
 account.2.auth_name = {$account.2.auth_id}
 
@@ -1240,7 +1240,7 @@ account.3.enable = 1
 {else}
 account.3.enable = 0
 {/if}
-account.3.label = {$account.3.display_name}
+account.3.label = {$account.3.label}
 account.3.display_name = {$account.3.display_name}
 account.3.auth_name = {$account.3.auth_id}
 
@@ -1803,7 +1803,7 @@ account.4.enable = 1
 {else}
 account.4.enable = 0
 {/if}
-account.4.label = {$account.4.display_name}
+account.4.label = {$account.4.label}
 account.4.display_name = {$account.4.display_name}
 account.4.auth_name = {$account.4.auth_id}
 
@@ -2366,7 +2366,7 @@ account.5.enable = 1
 {else}
 account.5.enable = 0
 {/if}
-account.5.label = {$account.5.display_name}
+account.5.label = {$account.5.label}
 account.5.display_name = {$account.5.display_name}
 account.5.auth_name = {$account.5.auth_id}
 
@@ -2929,7 +2929,7 @@ account.6.enable = 1
 {else}
 account.6.enable = 0
 {/if}
-account.6.label = {$account.6.display_name}
+account.6.label = {$account.6.label}
 account.6.display_name = {$account.6.display_name}
 account.6.auth_name = {$account.6.auth_id}
 
