--- a/resources/templates/provision/yealink/w60b/{$mac}.cfg
+++ b/resources/templates/provision/yealink/w60b/{$mac}.cfg
@@ -10,7 +10,7 @@
 #Basic Settings
 account.1.enable = {if isset($account.1.password)}1{else}0{/if}{""}
 
-account.1.label = {$account.1.display_name}
+account.1.label = {$account.1.label}
 account.1.display_name = {$account.1.display_name}
 
 {if isset($account.1.server.1.address)}
@@ -300,7 +300,7 @@ voice_mail.number.1 = {$voicemail_number}
 #Basic Settings
 account.2.enable = {if isset($account.2.password) }1{else}0{/if}{""}
 
-account.2.label = {$account.2.display_name}
+account.2.label = {$account.2.label}
 account.2.display_name = {$account.2.display_name}
 
 {if isset($account.2.server.1.address)}
@@ -546,7 +546,7 @@ voice_mail.number.2 = {$voicemail_number}
 #Basic Settings
 account.3.enable = {if isset($account.3.password) }1{else}0{/if}{""}
 
-account.3.label = {$account.3.display_name}
+account.3.label = {$account.3.label}
 account.3.display_name = {$account.3.display_name}
 
 {if isset($account.3.server.1.address)}
@@ -792,7 +792,7 @@ voice_mail.number.3 = {$voicemail_number}
 #Basic Settings
 account.4.enable = {if isset($account.4.password) }1{else}0{/if}{""}
 
-account.4.label = {$account.4.display_name}
+account.4.label = {$account.4.label}
 account.4.display_name = {$account.4.display_name}
 
 {if isset($account.4.server.1.address)}
@@ -1038,7 +1038,7 @@ voice_mail.number.4 = {$voicemail_number}
 #Basic Settings
 account.5.enable = {if isset($account.5.password) }1{else}0{/if}{""}
 
-account.5.label = {$account.5.display_name}
+account.5.label = {$account.5.label}
 account.5.display_name = {$account.5.display_name}
 
 {if isset($account.5.server.1.address)}
@@ -1303,7 +1303,7 @@ network.internet_port.gateway =
 #Basic Settings
 account.6.enable = {if isset($account.6.password) }1{else}0{/if}{""}
 
-account.6.label = {$account.6.display_name}
+account.6.label = {$account.6.label}
 account.6.display_name = {$account.6.display_name}
 
 {if isset($account.6.server.1.address)}
@@ -1568,7 +1568,7 @@ network.internet_port.gateway =
 #Basic Settings
 account.7.enable = {if isset($account.7.user_password) }1{else}0{/if}{""}
 
-account.7.label = {$account.7.display_name}
+account.7.label = {$account.7.label}
 account.7.display_name = {$account.7.display_name}
 
 {if isset($account.7.server.1.address)}
@@ -1833,7 +1833,7 @@ network.internet_port.gateway =
 #Basic Settings
 account.8.enable = {if isset($account.8.user_password) }1{else}0{/if}{""}
 
-account.8.label = {$account.8.display_name}
+account.8.label = {$account.8.label}
 account.8.display_name = {$account.8.display_name}
 
 {if isset($account.8.server.1.address)}
