--- a/resources/templates/provision/yealink/w56p/{$mac}.cfg
+++ b/resources/templates/provision/yealink/w56p/{$mac}.cfg
@@ -15,7 +15,7 @@ account.1.enable = 0
 {/if}
 
 #Configure the label displayed on the LCD screen for account 1.
-account.1.label = {$account.1.display_name}
+account.1.label = {$account.1.label}
 
 #Configure the display name of account 1.
 account.1.display_name = {$account.1.display_name}
@@ -332,7 +332,7 @@ account.2.enable = 0
 {/if}
 
 #Configure the label displayed on the LCD screen for account 1.
-account.2.label = {$account.2.display_name}
+account.2.label = {$account.2.label}
 
 #Configure the display name of account 1.
 account.2.display_name = {$account.2.display_name}
@@ -590,7 +590,7 @@ account.3.enable = 0
 {/if}
 
 #Configure the label displayed on the LCD screen for account 1.
-account.3.label = {$account.3.display_name}
+account.3.label = {$account.3.label}
 
 #Configure the display name of account 1.
 account.3.display_name = {$account.3.display_name}
@@ -848,7 +848,7 @@ account.4.enable = 0
 {/if}
 
 #Configure the label displayed on the LCD screen for account 1.
-account.4.label = {$account.4.display_name}
+account.4.label = {$account.4.label}
 
 #Configure the display name of account 1.
 account.4.display_name = {$account.4.display_name}
@@ -1108,7 +1108,7 @@ account.5.enable = 0
 {/if}
 
 #Configure the label displayed on the LCD screen for account 1.
-account.5.label = {$account.5.display_name}
+account.5.label = {$account.5.label}
 
 #Configure the display name of account 1.
 account.5.display_name = {$account.5.display_name}
