--- a/resources/templates/provision/yealink/w52p/{$mac}.cfg
+++ b/resources/templates/provision/yealink/w52p/{$mac}.cfg
@@ -15,7 +15,7 @@ account.1.enable = 0
 {/if}
 
 #Configure the label displayed on the LCD screen for account 1.
-account.1.label = {$account.1.display_name}
+account.1.label = {$account.1.label}
 
 #Configure the display name of account 1.
 account.1.display_name = {$account.1.display_name}
@@ -347,7 +347,7 @@ account.2.enable = 0
 {/if}
 
 #Configure the label displayed on the LCD screen for account 1.
-account.2.label = {$account.2.display_name}
+account.2.label = {$account.2.label}
 
 #Configure the display name of account 1.
 account.2.display_name = {$account.2.display_name}
@@ -620,7 +620,7 @@ account.3.enable = 0
 {/if}
 
 #Configure the label displayed on the LCD screen for account 1.
-account.3.label = {$account.3.display_name}
+account.3.label = {$account.3.label}
 
 #Configure the display name of account 1.
 account.3.display_name = {$account.3.display_name}
@@ -893,7 +893,7 @@ account.4.enable = 0
 {/if}
 
 #Configure the label displayed on the LCD screen for account 1.
-account.4.label = {$account.4.display_name}
+account.4.label = {$account.4.label}
 
 #Configure the display name of account 1.
 account.4.display_name = {$account.4.display_name}
@@ -1168,7 +1168,7 @@ account.5.enable = 0
 {/if}
 
 #Configure the label displayed on the LCD screen for account 1.
-account.5.label = {$account.5.display_name}
+account.5.label = {$account.5.label}
 
 #Configure the display name of account 1.
 account.5.display_name = {$account.5.display_name}
