--- a/resources/templates/provision/yealink/t56a/{$mac}.cfg
+++ b/resources/templates/provision/yealink/t56a/{$mac}.cfg
@@ -11,7 +11,7 @@ account.1.enable = 1
 {else}
 account.1.enable = 0
 {/if}
-account.1.label = {$account.1.display_name}
+account.1.label = {$account.1.label}
 account.1.display_name = {$account.1.display_name}
 account.1.auth_name = {$account.1.auth_id} 
 {if isset($account.1.server.1.address)}
@@ -484,7 +484,7 @@ account.2.enable = 1
 {else}
 account.2.enable = 0
 {/if}
-account.2.label = {$account.2.display_name}
+account.2.label = {$account.2.label}
 account.2.display_name = {$account.2.display_name}
 account.2.auth_name = {$account.2.auth_id}
 account.2.password = {$account.2.password}
@@ -946,7 +946,7 @@ account.3.enable = 1
 {else}
 account.3.enable = 0
 {/if}
-account.3.label = {$account.3.display_name}
+account.3.label = {$account.3.label}
 account.3.display_name = {$account.3.display_name}
 account.3.auth_name = {$account.3.auth_id}
 account.3.password = {$account.3.password}
@@ -1409,7 +1409,7 @@ account.4.enable = 1
 {else}
 account.4.enable = 0
 {/if}
-account.4.label = {$account.4.display_name}
+account.4.label = {$account.4.label}
 account.4.display_name = {$account.4.display_name}
 account.4.auth_name = {$account.4.auth_id}
 account.4.password = {$account.4.password}
@@ -1875,7 +1875,7 @@ account.5.enable = 1
 {else}
 account.5.enable = 0
 {/if}
-account.5.label = {$account.5.display_name}
+account.5.label = {$account.5.label}
 account.5.display_name = {$account.5.display_name}
 account.5.auth_name = {$account.5.auth_id}
 account.5.password = {$account.5.password}
@@ -2344,7 +2344,7 @@ account.6.enable = 1
 {else}
 account.6.enable = 0
 {/if}
-account.6.label = {$account.6.display_name}
+account.6.label = {$account.6.label}
 account.6.display_name = {$account.6.display_name}
 account.6.auth_name = {$account.6.auth_id}
 account.6.password = {$account.6.password}
