--- a/resources/templates/provision/yealink/t53w/{$mac}.cfg
+++ b/resources/templates/provision/yealink/t53w/{$mac}.cfg
@@ -113,7 +113,7 @@ account.1.enable = 1
 {else}
 account.1.enable = 0
 {/if}
-account.1.label = {$account.1.display_name}
+account.1.label = {$account.1.label}
 account.1.display_name = {$account.1.display_name}
 account.1.auth_name = {$account.1.auth_id}
 account.1.password = {$account.1.password}
@@ -653,7 +653,7 @@ account.2.enable = 1
 {else}
 account.2.enable = 0
 {/if}
-account.2.label = {$account.2.display_name}
+account.2.label = {$account.2.label}
 account.2.display_name = {$account.2.display_name}
 account.2.auth_name = {$account.2.auth_id}
 account.2.password = {$account.2.password}
@@ -1181,7 +1181,7 @@ account.3.enable = 1
 {else}
 account.3.enable = 0
 {/if}
-account.3.label = {$account.3.display_name}
+account.3.label = {$account.3.label}
 account.3.display_name = {$account.3.display_name}
 account.3.auth_name = {$account.3.auth_id}
 account.3.password = {$account.3.password}
@@ -1709,7 +1709,7 @@ account.4.enable = 1
 {else}
 account.4.enable = 0
 {/if}
-account.4.label = {$account.4.display_name}
+account.4.label = {$account.4.label}
 account.4.display_name = {$account.4.display_name}
 account.4.auth_name = {$account.4.auth_id}
 account.4.password = {$account.4.password}
@@ -2236,7 +2236,7 @@ account.5.enable = 1
 {else}
 account.5.enable = 0
 {/if}
-account.5.label = {$account.5.display_name}
+account.5.label = {$account.5.label}
 account.5.display_name = {$account.5.display_name}
 account.5.auth_name = {$account.5.auth_id}
 account.5.password = {$account.5.password}
@@ -2777,7 +2777,7 @@ account.6.enable = 1
 {else}
 account.6.enable = 0
 {/if}
-account.6.label = {$account.6.display_name}
+account.6.label = {$account.6.label}
 account.6.display_name = {$account.6.display_name}
 account.6.auth_name = {$account.6.auth_id}
 account.6.password = {$account.6.password}
@@ -3305,7 +3305,7 @@ account.7.enable = 1
 {else}
 account.7.enable = 0
 {/if}
-account.7.label = {$account.7.display_name}
+account.7.label = {$account.7.label}
 account.7.display_name = {$account.7.display_name}
 account.7.auth_name = {$account.7.auth_id}
 account.7.password = {$account.7.password}
@@ -3833,7 +3833,7 @@ account.8.enable = 1
 {else}
 account.8.enable = 0
 {/if}
-account.8.label = {$account.8.display_name}
+account.8.label = {$account.8.label}
 account.8.display_name = {$account.8.display_name}
 account.8.auth_name = {$account.8.auth_id}
 account.8.password = {$account.8.password}
@@ -4361,7 +4361,7 @@ account.9.enable = 1
 {else}
 account.9.enable = 0
 {/if}
-account.9.label = {$account.9.display_name}
+account.9.label = {$account.9.label}
 account.9.display_name = {$account.9.display_name}
 account.9.auth_name = {$account.9.auth_id}
 account.9.password = {$account.9.password}
@@ -4889,7 +4889,7 @@ account.10.enable = 1
 {else}
 account.10.enable = 0
 {/if}
-account.10.label = {$account.10.display_name}
+account.10.label = {$account.10.label}
 account.10.display_name = {$account.10.display_name}
 account.10.auth_name = {$account.10.auth_id}
 account.10.password = {$account.10.password}
@@ -5324,5 +5324,3 @@ account.10.acd.call_information=
 #######################################################################################
 pstn.account.10.enable=
 pstn.account.10.label=
-
-
