--- a/resources/templates/provision/yealink/t52s/{$mac}.cfg
+++ b/resources/templates/provision/yealink/t52s/{$mac}.cfg
@@ -200,7 +200,7 @@ account.1.enable = 1
 {else}
 account.1.enable = 0
 {/if}
-account.1.label = {$account.1.display_name}
+account.1.label = {$account.1.label}
 account.1.display_name = {$account.1.display_name}
 account.1.auth_name = {$account.1.auth_id}
 account.1.password = {$account.1.password}
@@ -266,7 +266,7 @@ account.2.enable = 1
 {else}
 account.2.enable = 0
 {/if}
-account.2.label = {$account.2.display_name}
+account.2.label = {$account.2.label}
 account.2.display_name = {$account.2.display_name}
 account.2.auth_name = {$account.2.auth_id}
 account.2.password = {$account.2.password}
