--- a/resources/templates/provision/polycom/5.x/{$mac}.cfg
+++ b/resources/templates/provision/polycom/5.x/{$mac}.cfg
@@ -3,7 +3,7 @@
 	<REGISTRATION
 	{foreach $lines as $row}reg.{$row.line_number}.displayName="{$row.display_name}"
 		reg.{$row.line_number}.address="{$row.user_id}@{$row.server_address}"
-		reg.{$row.line_number}.label="{$row.display_name}"
+		reg.{$row.line_number}.label="{$row.label}"
 		reg.{$row.line_number}.serverFeatureControl.cf="{$polycom_feature_key_sync}"
 		reg.{$row.line_number}.serverFeatureControl.dnd="{$polycom_feature_key_sync}"
 		{if isset($row.shared_line)}reg.{$row.line_number}.type="{$row.shared_line}"{else}reg.{$row.line_number}.type="private"{/if}
