--- a/resources/templates/provision/yealink/t20p/y000000000007.cfg
+++ b/resources/templates/provision/yealink/t20p/y000000000007.cfg
@@ -1193,7 +1193,7 @@ phone_setting.predial_autodial = 1
 phone_setting.is_deal180 =
 
 #Configure the delay time (in seconds) for the dialnow rule. It ranges from 1 to 14, the default value is 1.
-phone_setting.dialnow_delay =
+phone_setting.dialnow_delay = {$yealink_dialplan_dialnow_delay}
 
 #Enable or disable the user to customize the softkey layout; 0-Disabled (default), 1-Enabled;
 phone_setting.custom_softkey_enable =
@@ -1327,5 +1327,4 @@ web_item_level.url =
 ##                                   SIP Advanced                                    ##
 #######################################################################################
 
-sip.call_fail_use_reason.enable = {$yealink_sip_call_fail_use_reason_enable}
-
+sip.call_fail_use_reason.enable = {$yealink_sip_call_fail_use_reason_enable
