--- a/resources/templates/provision/yealink/t33g/y000000000124.cfg
+++ b/resources/templates/provision/yealink/t33g/y000000000124.cfg
@@ -1490,7 +1490,7 @@ dialplan_replace_rule.url=
 dialplan.replace.line_id.1=
 dialplan.replace.replace.1=
 dialplan.replace.prefix.1=
-phone_setting.dialnow_delay=
+phone_setting.dialnow_delay = {$yealink_dialplan_dialnow_delay}
 dialplan_dialnow.url=
 dialplan.dialnow.line_id.1=
 dialplan.dialnow.rule.1 = {$yealink_dialplan_dialnow_rule_1}
