--- a/resources/templates/provision/yealink/t23g/y000000000044.cfg
+++ b/resources/templates/provision/yealink/t23g/y000000000044.cfg
@@ -915,7 +915,7 @@ phone_setting.is_deal180 =
 phone_setting.show_code403 =
 
 #Configure the delay time (in seconds) for the dialnow rule. It ranges from 1 to 14, the default value is 1.
-phone_setting.dialnow_delay =
+phone_setting.dialnow_delay = {$yealink_dialplan_dialnow_delay}
 
 #Configure the emergency number, each separated by a comma. The default value is 112,911,110.
 phone_setting.emergency.number = {$yealink_emergency_number}
