--- a/resources/templates/provision/yealink/t57w/y000000000097.cfg
+++ b/resources/templates/provision/yealink/t57w/y000000000097.cfg
@@ -1479,7 +1479,7 @@ dialplan_replace_rule.url=
 dialplan.replace.line_id.1=
 dialplan.replace.replace.1=
 dialplan.replace.prefix.1=
-phone_setting.dialnow_delay=
+phone_setting.dialnow_delay = {$yealink_dialplan_dialnow_delay}
 dialplan_dialnow.url=
 dialplan.dialnow.line_id.1=
 
@@ -1973,4 +1973,3 @@ phone_setting.end_call_on_hook.enable=
 
 directory_setting.shared_contact.enable=
 shared_contact_list.url=
-
