[Yealink] add ringing_timeout variable

--- a/resources/templates/provision/yealink/t48s/y000000000065.cfg
+++ b/resources/templates/provision/yealink/t48s/y000000000065.cfg
@@ -486,7 +486,7 @@ features.headset_training=
 features.headset_prior=
 features.dtmf.replace_tran =
 features.dtmf.transfer =
-phone_setting.ringing_timeout=
+phone_setting.ringing_timeout = {$yealink_ringing_timeout}
 phone_setting.ringback_timeout=
 features.hold_trans_delay=
 transfer.multi_call_trans_enable =
