--- a/resources/templates/provision/yealink/vp59/y000000000091.cfg
+++ b/resources/templates/provision/yealink/vp59/y000000000091.cfg
@@ -789,7 +789,7 @@ phone_setting.is_deal180 =
 phone_setting.show_code403 =
 
 phone_setting.ringback_timeout =
-phone_setting.ringing_timeout =
+phone_setting.ringing_timeout = {$yealink_ringing_timeout}
 
 phone_setting.page_tip = 
 phone_setting.predial_autodial = 
