--- a/resources/templates/provision/yealink/t53/y000000000095.cfg
+++ b/resources/templates/provision/yealink/t53/y000000000095.cfg
@@ -477,7 +477,7 @@ features.headset_training=
 features.headset_prior=
 features.dtmf.replace_tran =
 features.dtmf.transfer =
-phone_setting.ringing_timeout=
+phone_setting.ringing_timeout = {$yealink_ringing_timeout}
 phone_setting.ringback_timeout=
 
 features.keep_mute.enable=
