--- a/resources/templates/provision/yealink/t56a/y000000000056.cfg
+++ b/resources/templates/provision/yealink/t56a/y000000000056.cfg
@@ -874,7 +874,7 @@ phone_setting.is_deal180 =
 phone_setting.show_code403 =
 
 phone_setting.ringback_timeout =
-phone_setting.ringing_timeout =
+phone_setting.ringing_timeout = {$yealink_ringing_timeout}
 
 phone_setting.page_tip = 
 phone_setting.predial_autodial = 
@@ -1494,7 +1494,7 @@ voice.side_tone =
 static.security.default_access_level =
 static.auto_provision.attempt_expired_time = 
 phone_setting.ringback_timeout = 
-phone_setting.ringing_timeout =  
+phone_setting.ringing_timeout = {$yealink_ringing_timeout}  
 
 
 #######################################################################################
